moficaciones en el frontend

--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Empresa/ListaEmpresa.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Empresa/ListaEmpresa.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-lg col-md col">
         <div class="card">
-            <div class="card-header bg-dark bg-gradient text-light">
+            <div class="card-header bg-dark text-light">
               <h3>Lista de Empresas</h3>
             </div>
             <div class="card-body">
@@ -43,6 +43,9 @@
                                     <td>
                                        <a class="btn btn-success table-btn" asp-page="./IngresarEmpresa" >Ingresar</a>
                                     </td> 
+                                     <td>
+                                       <a class="btn btn-danger table-btn" asp-page="" >Eliminar</a>
+                                    </td>
                                 </tr>
                               }
                     </tbody>
@@ -50,8 +53,8 @@
                 </table>
 
             </div>
-            <div class="card-footer">
-
+            <div class="card bg-dark bg-gradient text-light">
+                <div class="card-footer"></div>
             </div>
         </div>
     </div>
