--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/ListaMascotas.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/ListaMascotas.cshtml
@@ -65,6 +65,9 @@
                                     <td>
                                        <a class="btn btn-success table-btn" asp-page="./IngresarMascota" >Ingresar</a>
                                     </td> 
+                                     <td>
+                                       <a class="btn btn-danger table-btn" asp-page="" >Eliminar</a>
+                                    </td>
                                 </tr>
                               }
                     </tbody>
@@ -72,8 +75,8 @@
                 </table>
 
             </div>
-            <div class="card-footer">
-
+            <div class="card bg-dark bg-gradient text-light">
+                <div class="card-footer"></div>
             </div>
         </div>
     </div>
