--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/BuscarMedico.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/BuscarMedico.cshtml
@@ -49,8 +49,8 @@
                     </tbody>
                 </table>
             </div>
-            <div class="card-footer">
-
+            <div class="card bg-dark bg-gradient text-light">
+                <div class="card-footer"></div>
             </div>
         </div>
     </div>
