--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/BuscarPropietario.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/BuscarPropietario.cshtml
@@ -61,8 +61,8 @@
                 </table>
 
             </div>
-            <div class="card-footer">
-
+          <div class="card bg-dark bg-gradient text-light">
+                <div class="card-footer"></div>
             </div>
         </div>
     </div>
