--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/BuscarMascota.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/BuscarMascota.cshtml
@@ -60,8 +60,8 @@
                     </tbody>
                 </table>
             </div>
-            <div class="card-footer">
-
+           <div class="card bg-dark bg-gradient text-light">
+                <div class="card-footer"></div>
             </div>
         </div>
     </div>
