--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/IngresarMedico.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/IngresarMedico.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 <div class="card bg-dark bg-gradient text-light">
-<h1>Ingresar Medico</h1>
+<h3>Ingresar Medico</h3>
 </div>
 <form method="post">
 <div class="form-group">
@@ -28,7 +28,7 @@
     </div>
     <div class="form-group">
         <label asp-for="medico.TipoAnimal"></label>
-        <select id="seleccion" asp-items='@new SelectList(Model.tipoanimal_,"IdAnimal","Animal")'>
+        <select id="seleccion" asp-items='@new SelectList(Model.tipoanimal_,"IdAnimal","Animal")' class="form-control-sm">
             <option value="">Seleccione el Tipo Animal</option>
         </select>
     </div>
