--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/ListaPropietarios.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/ListaPropietarios.cshtml
@@ -59,6 +59,9 @@
                                     </td> 
                                     <td>
                                        <a class="btn btn-success table-btn" asp-page="./IngresarPropietarios" >Ingresar</a>
+                                    </td>
+                                     <td>
+                                       <a class="btn btn-danger table-btn" asp-page="" >Eliminar</a>
                                     </td> 
                                 </tr>
                               }
@@ -67,8 +70,8 @@
                 </table>
 
             </div>
-            <div class="card-footer">
-
+            <div class="card bg-dark bg-gradient text-light">
+                <div class="card-footer"></div>
             </div>
         </div>
     </div>
