--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/ActualizarMedicos.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/ActualizarMedicos.cshtml
@@ -28,7 +28,7 @@
         <input id="TarjetaPro" type="text" asp-for="medico.TarjetaProfesional" class="form-control" placeholder="Ingrese Tarjeta Profesional"/>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary" onclick="Actualizado()">Guardar Cambios</button>
+        <button type="submit" class="btn btn-primary" onclick="Actualizado()"><img src="~/img/guardar.png" width="24"  class="img"/>Guardar Cambios</button>
         
        
     </div>
