--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Empresa/ActualizarEmpresa.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Empresa/ActualizarEmpresa.cshtml
@@ -21,7 +21,7 @@
     </div>
     
     <div class="form-group">
-        <button type="submit" class="btn btn-primary" onclick="Actualizado()">Guardar Cambios</button> 
+        <button type="submit" class="btn btn-primary" onclick="Actualizado()"><img src="~/img/guardar.png" width="24"  class="img"/>Guardar Cambios</button> 
     </div>
 </form>
 <button id="Cancelar" onclick="LimpiarForm();" type="submit"  class="btn btn-danger">Cancelar</button>
