--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Empresa/IngresarEmpresa.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Empresa/IngresarEmpresa.cshtml
@@ -19,7 +19,7 @@
         <input id="direccion" type="text" asp-for="empresa.Direccion" class="form-control" placeholder="Ingrese la Direccion"/>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-primary"><img src="~/img/guardar.png" width="24"  class="img"/>Guardar</button>
     </div>
 </form>
 <button id="Cancelar" onclick="LimpiarForm()" type="submit" class="btn btn-danger">Cancelar</button>
