--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Empresa/ListaEmpresa.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Empresa/ListaEmpresa.cshtml
@@ -35,16 +35,16 @@
                                         @item.Direccion
                                     </td> 
                                     <td>
-                                       <a class="btn btn-primary table-btn" asp-page="./BuscarEmpresa" asp-route-IdEmpresa="@item.IdEmpresa">Buscar</a>
+                                       <a class="btn btn-primary table-btn" asp-page="./BuscarEmpresa" asp-route-IdEmpresa="@item.IdEmpresa"><img src="~/img/buscar.png" width="24"  class="img"/>Buscar</a>
                                     </td> 
                                     <td>
-                                       <a class="btn btn-warning table-btn" asp-page="./ActualizarEmpresa" asp-route-IdEmpresa="@item.IdEmpresa">Editar</a>
+                                       <a class="btn btn-warning table-btn" asp-page="./ActualizarEmpresa" asp-route-IdEmpresa="@item.IdEmpresa"><img src="~/img/ActualizarRegistro.png" width="24" title="Actualizar Registro" class="img"/>Editar</a>
                                     </td> 
                                     <td>
-                                       <a class="btn btn-success table-btn" asp-page="./IngresarEmpresa" >Ingresar</a>
+                                       <a class="btn btn-success table-btn" asp-page="./IngresarEmpresa" ><img src="~/img/buscar.png" width="24" class="img"/><img src="~/img/solicitud.png" width="24"  class="img"/>Ingresar</a>
                                     </td> 
                                      <td>
-                                       <a class="btn btn-danger table-btn" asp-page="" >Eliminar</a>
+                                       <a class="btn btn-danger table-btn" asp-page="" ><img src="~/img/eliminar.png" width="24"  class="img"/>Eliminar</a>
                                     </td>
                                 </tr>
                               }
