--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/ActualizarMascota.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/ActualizarMascota.cshtml
@@ -40,7 +40,7 @@
         <input id="Estado_Animo" type="text" asp-for="mascota.EstadoAnimo" class="form-control" placeholder="Ingrese Estado de Animo"/>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary" onclick="Actualizado()">Guardar Cambios</button>
+        <button type="submit" class="btn btn-primary" onclick="Actualizado()"><img src="~/img/guardar.png" width="24"  class="img"/>Guardar Cambios</button>
         
        
     </div>
