--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/BuscarMascota.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/BuscarMascota.cshtml
@@ -6,7 +6,7 @@
     <div class="col-lg col-md col">
         <div class="card">
             <div class="card-header bg-dark bg-gradient text-light">
-              <h3>Medicos</h3>
+              <h3>Detalle de la Mascota</h3>
             </div>
             <div class="card-body">
                 <table class="table">
