--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/ListaMascotas.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Mascotas/ListaMascotas.cshtml
@@ -57,19 +57,19 @@
                                     </td>
                                     
                                     <td>
-                                       <a class="btn btn-primary table-btn" asp-page="./BuscarMascota" asp-route-IdMascota="@item.IdMascota">Buscar</a>
+                                       <a class="btn btn-primary table-btn" asp-page="./BuscarMascota" asp-route-IdMascota="@item.IdMascota"><img src="~/img/buscar.png" width="24"  class="img"/>Buscar</a>
                                     </td> 
                                     <td>
-                                       <a class="btn btn-warning table-btn" asp-page="./ActualizarMascota" asp-route-IdMascota="@item.IdMascota">Editar</a>
+                                       <a class="btn btn-warning table-btn" asp-page="./ActualizarMascota" asp-route-IdMascota="@item.IdMascota"><img src="~/img/ActualizarRegistro.png" width="24" title="Actualizar Registro" class="img"/>Editar</a>
                                     </td> 
                                     <td>
-                                       <a class="btn btn-success table-btn" asp-page="./IngresarMascota" >Ingresar</a>
+                                       <a class="btn btn-success table-btn" asp-page="./IngresarMascota" ><img src="~/img/solicitud.png" width="24"  class="img"/>Ingresar</a>
                                     </td> 
                                      <td>
-                                       <a class="btn btn-danger table-btn" asp-page="" >Eliminar</a>
+                                       <a class="btn btn-danger table-btn" asp-page="" ><img src="~/img/eliminar.png" width="24"  class="img"/>Eliminar</a>
                                     </td>
                                 </tr>
-                              }
+                            }
                     </tbody>
                     
                 </table>
