--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/BuscarMedico.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/BuscarMedico.cshtml
@@ -7,7 +7,7 @@
     <div class="col-lg col-md col">
         <div class="card">
             <div class="card-header bg-dark bg-gradient text-light">
-              <h2>Medicos Por ID</h2>
+              <h2>Datos Personales del Medico</h2>
             </div>
             <div class="card-body">
                 <table class="table">
