--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/ListadoMedicos.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Medicos/ListadoMedicos.cshtml
@@ -45,16 +45,16 @@
                                     </td>
                                     
                                     <td>
-                                       <a class="btn btn-primary table-btn" asp-page="./BuscarMedico" asp-route-IdMedico="@item.Id">Buscar</a>
+                                       <a class="btn btn-primary table-btn" asp-page="./BuscarMedico" asp-route-IdMedico="@item.Id"><img src="~/img/buscar.png" width="24"  class="img"/>Buscar</a>
                                     </td> 
                                     <td>
-                                       <a class="btn btn-warning table-btn" asp-page="./ActualizarMedicos" asp-route-IdMedico="@item.Id">Editar</a>
+                                       <a class="btn btn-warning table-btn" asp-page="./ActualizarMedicos" asp-route-IdMedico="@item.Id"><img src="~/img/ActualizarRegistro.png" width="24" title="Actualizar Registro" class="img"/>Editar</a>
                                     </td> 
                                     <td>
-                                       <a class="btn btn-success table-btn" asp-page="./IngresarMedico" >Ingresar</a>
+                                       <a class="btn btn-success table-btn" asp-page="./IngresarMedico" ><img src="~/img/solicitud.png" width="24"  class="img"/>Ingresar</a>
                                     </td> 
                                     <td>
-                                       <a class="btn btn-danger table-btn" asp-page="" >Eliminar</a>
+                                       <a class="btn btn-danger table-btn" asp-page="" ><img src="~/img/eliminar.png" width="24"  class="img"/>Eliminar</a>
                                     </td> 
                                 </tr>
                               }
