--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/ActualizarPropietario.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/ActualizarPropietario.cshtml
@@ -36,7 +36,7 @@
         <input id="CantidaMascotas" type="text" asp-for="propietario.CantidadMascota" class="form-control" placeholder="Ingrese Cantidad de Mascotas"/>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary" onclick="Actualizado()">Guardar Cambios</button>
+        <button type="submit" class="btn btn-primary" onclick="Actualizado()"><img src="~/img/guardar.png" width="24"  class="img"/>Guardar Cambios</button>
         
        
     </div>
