--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/ListaPropietarios.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/Propietario/ListaPropietarios.cshtml
@@ -52,16 +52,16 @@
                                         @item.CantidadMascota
                                     </td>
                                     <td>
-                                       <a class="btn btn-primary table-btn" asp-page="./BuscarPropietario" asp-route-IdPropietario="@item.Id">Buscar</a>
+                                       <a class="btn btn-primary table-btn" asp-page="./BuscarPropietario" asp-route-IdPropietario="@item.Id"><img src="~/img/buscar.png" width="24"  class="img"/>Buscar</a>
                                     </td> 
                                     <td>
-                                       <a class="btn btn-warning table-btn" asp-page="./ActualizarPropietario" asp-route-IdPropietario="@item.Id">Editar</a>
+                                       <a class="btn btn-warning table-btn" asp-page="./ActualizarPropietario" asp-route-IdPropietario="@item.Id"><img src="~/img/ActualizarRegistro.png" width="24" title="Actualizar Registro" class="img"/>Editar</a>
                                     </td> 
                                     <td>
-                                       <a class="btn btn-success table-btn" asp-page="./IngresarPropietarios" >Ingresar</a>
+                                       <a class="btn btn-success table-btn" asp-page="./IngresarPropietarios" ><img src="~/img/solicitud.png" width="24"  class="img"/>Ingresar</a>
                                     </td>
                                      <td>
-                                       <a class="btn btn-danger table-btn" asp-page="" >Eliminar</a>
+                                       <a class="btn btn-danger table-btn" asp-page="" ><img src="~/img/eliminar.png" width="24"  class="img"/>Eliminar</a>
                                     </td> 
                                 </tr>
                               }
