--- a/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/RegistroMed/ActualizarRegistro.cshtml
+++ b/MascotaEpets.app/MascotaEpets.app.Presentacion/Pages/RegistroMed/ActualizarRegistro.cshtml
@@ -20,7 +20,7 @@
         <input id="medicamento" type="text" asp-for="registro.Medicamentos" class="form-control" placeholder="Ingrese Cedula"/>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary" onclick="Actualizado()">Guardar Cambios</button>
+        <button type="submit" class="btn btn-primary" onclick="Actualizado()"><img src="~/img/guardar.png" width="24"  class="img"/>Guardar Cambios</button>
         
        
     </div>
